// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rendering renders correctly 1`] = `
<div
  className=" well well-bordered followup-flow followup-well followup-well-link followup-type-wrap followup-type-wrap-inner "
>
  <img
    alt="title"
    className="offset-bottom img-responsive"
    src="abc"
    width="120"
  />
  <div
    dangerouslySetInnerHTML={
      Object {
        "__html": "Snippet",
      }
    }
  />
  <Reputation
    dislikeAction={[Function]}
    dislikeCount={0}
    dislikeLabel="dislike"
    likeAction={[Function]}
    likeCount={0}
    likeLabel="like"
    voted={false}
    votingLimitError="voting-error"
  />
</div>
`;

exports[`rendering renders correctly 2`] = `
<div
  className=" well well-bordered followup-flow followup-well followup-well-link followup-type-wrap followup-type-wrap-inner "
>
  <div
    className="followup-type followup-type-right followup-type-right-alt"
  >
    <span
      aria-hidden="true"
      className="followup-type-icon glyphicon glyphicon-heart"
    />
    <span
      className="followup-type-title"
    >
      typeSupporting
    </span>
  </div>
  <img
    alt="title"
    className="offset-bottom img-responsive"
    src="abc"
    width="120"
  />
  <div
    dangerouslySetInnerHTML={
      Object {
        "__html": "Snippet",
      }
    }
  />
  <Reputation
    dislikeAction={[Function]}
    dislikeCount={0}
    dislikeLabel="dislike"
    likeAction={[Function]}
    likeCount={0}
    likeLabel="like"
    voted={false}
    votingLimitError="voting-error"
  />
</div>
`;

exports[`rendering renders correctly 3`] = `
<div
  className=" well well-bordered followup-flow followup-well followup-well-link followup-type-wrap followup-type-wrap-inner "
>
  <div
    className="followup-type followup-type-right followup-type-right-alt"
  >
    <span
      aria-hidden="true"
      className="followup-type-icon glyphicon glyphicon-play"
    />
    <span
      className="followup-type-title"
    >
      typeAction
    </span>
  </div>
  <img
    alt="title"
    className="offset-bottom img-responsive"
    src="abc"
    width="120"
  />
  <div
    dangerouslySetInnerHTML={
      Object {
        "__html": "Snippet",
      }
    }
  />
  <Reputation
    dislikeAction={[Function]}
    dislikeCount={0}
    dislikeLabel="dislike"
    likeAction={[Function]}
    likeCount={0}
    likeLabel="like"
    voted={false}
    votingLimitError="voting-error"
  />
</div>
`;

exports[`rendering renders correctly 4`] = `
<div
  className=" well well-bordered followup-flow followup-well followup-well-link followup-type-wrap followup-type-wrap-inner "
>
  <div
    className="followup-type followup-type-right followup-type-right-alt"
  >
    <span
      aria-hidden="true"
      className="followup-type-icon glyphicon glyphicon-minus-sign"
    />
    <span
      className="followup-type-title"
    >
      typeRejected
    </span>
  </div>
  <img
    alt="title"
    className="offset-bottom img-responsive"
    src="abc"
    width="120"
  />
  <div
    dangerouslySetInnerHTML={
      Object {
        "__html": "Snippet",
      }
    }
  />
  <Reputation
    dislikeAction={[Function]}
    dislikeCount={0}
    dislikeLabel="dislike"
    likeAction={[Function]}
    likeCount={0}
    likeLabel="like"
    voted={false}
    votingLimitError="voting-error"
  />
</div>
`;

exports[`rendering renders correctly 5`] = `
<div
  className=" well well-bordered followup-flow followup-well followup-well-link followup-type-wrap followup-type-wrap-inner "
>
  <div
    className="followup-type followup-type-right followup-type-right-alt"
  >
    <span
      aria-hidden="true"
      className="followup-type-icon glyphicon glyphicon-lock"
    />
    <span
      className="followup-type-title"
    >
      typeEnd
    </span>
  </div>
  <img
    alt="title"
    className="offset-bottom img-responsive"
    src="abc"
    width="120"
  />
  <div
    dangerouslySetInnerHTML={
      Object {
        "__html": "Snippet",
      }
    }
  />
  <Reputation
    dislikeAction={[Function]}
    dislikeCount={0}
    dislikeLabel="dislike"
    likeAction={[Function]}
    likeCount={0}
    likeLabel="like"
    voted={false}
    votingLimitError="voting-error"
  />
</div>
`;
